# lafayette

./: LICENSE  README.rst  setup.cfg
lafayette/: __init__.py  decoder.py  fingerprint.py
