[metadata]
name = lafayette
version = 0.1.0
author = Dennis Lutter
author-email = lad1337@gmail.com
summary = sound fingerprinting
description-file = README.rst
home-page = https://github.com/lad1337/lafayette
classifier =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Topic :: Software Development :: Libraries

